--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # For PCBs designed using KiCad: http://www.kicad-pcb.org/
 # Format documentation: http://kicad-pcb.org/help/file-formats/
 
+optical-amoeba-backups/
+
 # Temporary files
 *.000
 *.bak
@@ -24,3 +26,7 @@ fp-info-cache
 # Exported BOM files
 *.xml
 *.csv
+
+gerbers/
+*.zip
+.DS_Store
